--- a/css/styles.css
+++ b/css/styles.css
@@ -1,47 +1,72 @@
 body {
-    background-color: #eee;
+    font-family: 'Noto Sans Mono', monospace;
     margin: 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100%;
+    background-color: #22223b;
+    color: #f2e9e4;
     height: 100vh;
+    text-align: center;
 }
 
 .calc {
-    background-color: #9aa0a6;
-    color: white;
-    width: 25%;
-    height: 80%;
     display: flex;
-    flex-wrap: wrap;
     flex-direction: column;
-    align-items: center;
-    border: 1px solid black;
-    padding: 2rem;
-    margin-bottom: 2rem;
+    align-content: center;
+    text-align: center;
+    background-color: #4a4e69;
+    width: 40%;
+    height: 400%;
+    border: 1px solid #f2e9e4;
+    border-radius: 10px;
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+    margin: 1rem;
 }
 
-.calc .display {
+.calc .screen {
     display: flex;
+    justify-content: flex-end;
+    text-align: center;
     align-items: center;
-    justify-content: center;
-    border: 1px solid black;
-    width: 100%;
-    height: 2.5rem;
-    align-self: flex-end;
-    background-color: #3c4043;
+    background-color: #22223b;
+    width: 80%;
+    margin: auto;
+    height: 3rem;
+    border: 1.5px solid #f2e9e4;
+    border-radius: 5px;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+
+h2 {
+    padding-right: 1rem;
+    padding-left: .45rem;
 }
 
 .calc button {
-    background-color: #5f6368;
-    color: #e8eaed;
-    width: 31.5%;
-    height: 45%;
-    margin: 1px
+    font-size: 1.1rem;
+    font-weight: bold;
+    width: 30%;
+    height: 3rem;
+    margin: .5px;
+    border-radius: 5px;
+    background-color: #22223b;
+    color: #f2e9e4;
 }
 
-.calc .num {
-    background-color: #3c4043;
+.calc button:hover{
+    background-color: #f2e9e4;
+    color: #22223b;
+    cursor: pointer;
+}
+
+@media (max-width: 810px){
+    .calc {
+        width: 70%;
+        height: auto;
+    }
+
 }
