--- a/css/styles.css
+++ b/css/styles.css
@@ -17,12 +17,11 @@ body {
     align-content: center;
     text-align: center;
     background-color: #4a4e69;
-    width: 40%;
-    height: 400%;
+    max-width: 45%;
+    height: auto;
     border: 1px solid #f2e9e4;
     border-radius: 10px;
-    padding-top: 5rem;
-    padding-bottom: 5rem;
+    padding: 3rem;
     margin: 1rem;
 }
 
@@ -32,13 +31,13 @@ body {
     text-align: center;
     align-items: center;
     background-color: #22223b;
-    width: 80%;
+    width: 70%;
     margin: auto;
     height: 3rem;
     border: 1.5px solid #f2e9e4;
     border-radius: 5px;
     margin-top: 1rem;
-    margin-bottom: 1rem;
+    margin-bottom: 2rem;
 }
 
 h2 {
@@ -49,9 +48,10 @@ h2 {
 .calc button {
     font-size: 1.1rem;
     font-weight: bold;
-    width: 30%;
-    height: 3rem;
-    margin: .5px;
+    width: 28.4%;
+    height: auto;
+    margin: .1rem;
+    padding: 1.5rem;
     border-radius: 5px;
     background-color: #22223b;
     color: #f2e9e4;
@@ -63,10 +63,3 @@ h2 {
     cursor: pointer;
 }
 
-@media (max-width: 810px){
-    .calc {
-        width: 70%;
-        height: auto;
-    }
-
-}
