--- a/css/styles.css
+++ b/css/styles.css
@@ -1,28 +1,26 @@
 body {
+    background-color: #3c1518;
+    color: #fffffa;
     font-family: 'Noto Sans Mono', monospace;
-    margin: 0;
+    font-size: 1.3rem;
+    font-weight: 700;
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: #22223b;
-    color: #f2e9e4;
-    height: 100vh;
     text-align: center;
+    min-height: 95vh;
 }
 
 .calc {
+    background-color: #671e14;
     display: flex;
     flex-direction: column;
-    align-content: center;
-    text-align: center;
-    background-color: #4a4e69;
-    max-width: 45%;
+    align-items: center;
+    justify-content: center;
+    width: 25rem;
     height: auto;
-    border: 1px solid #f2e9e4;
+    padding: 2rem;
     border-radius: 10px;
-    padding: 3rem;
-    margin: 1rem;
 }
 
 .calc .screen {
@@ -30,36 +28,41 @@ body {
     justify-content: flex-end;
     text-align: center;
     align-items: center;
-    background-color: #22223b;
-    width: 70%;
-    margin: auto;
-    height: 3rem;
-    border: 1.5px solid #f2e9e4;
+    width: 15rem;
+    height: 2rem;
+    background-color: #3c1518;
+    padding: 1rem;
+    margin: 2rem;
     border-radius: 5px;
-    margin-top: 1rem;
-    margin-bottom: 2rem;
 }
 
 h2 {
-    padding-right: 1rem;
-    padding-left: .45rem;
+    padding-left: .7rem;
 }
 
 .calc button {
+    font-weight: 700;
     font-size: 1.1rem;
-    font-weight: bold;
-    width: 28.4%;
+    background-color: #3c1518;
+    color: #fffffa;
+    width: 6.4rem;
     height: auto;
-    margin: .1rem;
-    padding: 1.5rem;
-    border-radius: 5px;
-    background-color: #22223b;
-    color: #f2e9e4;
+    padding-top: 1.3rem;
+    padding-bottom: 1.3rem;
+    margin-top: .5rem;
+    border-radius: 10px;
 }
 
-.calc button:hover{
-    background-color: #f2e9e4;
-    color: #22223b;
+.calc .op {
+    background-color: #db6816;
+}
+
+.calc .sp {
+    background-color: #f9c067;
+}
+
+button:hover {
+    background-color: #f3ddd1 !important;
+    color: #3c1518;
     cursor: pointer;
 }
-
